--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,4 +36,6 @@ jobs:
           git config user.name "tkn7092"
           git config user.email "timothee.klein@etu.inp-n7.fr"
           git remote set-url origin "https://oauth2:${token}@gitlab.com/n7-rnote/N7"
+          git add .
+          git commit -m "test"
           git push origin main
