--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,6 @@ jobs:
           echo Starting to push repo to gitlab
           git config user.name "tkn7092"
           git config user.email "timothee.klein@etu.inp-n7.fr"
-          git remote set-url origin "https://oauth2:${token}@gitlab.com/n7-rnote/N7"
+          git remote set-url origin "https://oauth2:${token}@git.inpt.fr/kleint/N7.git"
           git filter-branch -- --all
           git push origin main --force
